[tool.poetry]
name = "wgs_correction"
version = "0.1.1"
description = "wgs_correction"
authors = ["kwtk"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zheuziihau"
repository = "https://github.com/zheuziihau/WGS_correction"
keywords = ["WGS", "GCJ", "BD09"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Framework :: AsyncIO",
]
include = [
    "LICENSE",
]
[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true


[tool.poetry.dependencies]
fiona = "^1.9.4.post1"